Fix up some namespacing.

--- a/less/labels-badges.less
+++ b/less/labels-badges.less
@@ -1,3 +1,4 @@
+.su_bootstrap_safe {
 // LABELS & BADGES
 // ---------------
 
@@ -52,4 +53,5 @@ a {
   // Inverse (black)
   &-inverse           { background-color: @grayDark; }
   &-inverse[href]     { background-color: darken(@grayDark, 10%); }
+}
 }
