--- a/less/mixins.less
+++ b/less/mixins.less
@@ -101,12 +101,14 @@
 // CSS image replacement
 // -------------------------
 // Source: https://github.com/h5bp/html5-boilerplate/commit/aa0396eae757
+.su_bootstrap_safe {
 .hide-text {
   font: 0/0 a;
   color: transparent;
   text-shadow: none;
   background-color: transparent;
   border: 0;
+}
 }
 
 
@@ -149,11 +151,13 @@
 // --------------------------------------------------
 
 // Block level inputs
+.su_bootstrap_safe {
 .input-block-level {
   display: block;
   width: 100%;
   min-height: 28px;        // Make inputs at least the height of their button counterpart
   .box-sizing(border-box); // Makes inputs behave like true block-level elements
+}
 }
 
 
@@ -590,7 +594,7 @@
       width: 100%;
       .clearfix();
       [class*="span"] {
-        .input-block-level();
+        .su_bootstrap_safe .input-block-level();
         float: left;
         margin-left: @fluidGridGutterWidth;
         *margin-left: @fluidGridGutterWidth - (.5 / @gridRowWidth * 100 * 1%);
